# sign-converter

./: setup.sh
signbridge-live/: .gitignore  Makefile
signbridge-live/apps/backend/: .env.example  README.md  generate_demo_model.py  pyproject.toml  train_gesture_model.py  use_pretrained.py
signbridge-live/apps/backend/app/: main.py
signbridge-live/apps/backend/app/ai/: gemini.py  prompts.py
signbridge-live/apps/backend/app/api/: router.py
signbridge-live/apps/backend/app/api/dependencies/: request_context.py
signbridge-live/apps/backend/app/api/middleware/: request_context.py
signbridge-live/apps/backend/app/api/routes/: health.py  stream.py
signbridge-live/apps/backend/app/core/: config.py  logging.py  redis.py  security.py  supabase.py
signbridge-live/apps/backend/app/cv/: detector.py  gesture_classifier.py  landmarks.py
signbridge-live/apps/backend/app/schemas/: __init__.py  common.py  gesture.py  health.py
signbridge-live/apps/backend/app/services/: gesture.py  health.py  meeting.py  transcript.py
signbridge-live/apps/backend/app/speech/: stt.py
signbridge-live/apps/backend/app/utils/: exceptions.py
signbridge-live/apps/backend/tests/: conftest.py  test_gesture.py  test_health.py
signbridge-live/extension/: build.js  package-lock.json  package.json  tailwind.config.js  test_extension.mjs  vite.config.ts
signbridge-live/extension/public/: manifest.json
signbridge-live/extension/src/: App.tsx  index.css
signbridge-live/extension/src/background/: index.ts
signbridge-live/extension/src/content/: index.ts
signbridge-live/extension/src/options/: App.tsx  index.html
signbridge-live/extension/src/overlay/: OverlayContainer.tsx
signbridge-live/extension/src/popup/: App.tsx  index.html  index.tsx
signbridge-live/extension/src/services/: apiClient.ts  webSocketClient.ts
signbridge-live/extension/src/store/: captionStore.ts  connectionStore.ts  meetingStore.ts  settingsStore.ts
(+1 files in other folders)
