[project]
name = "signbridge-backend"
version = "0.1.0"
description = "SignBridge Live FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.0.0",
    "structlog>=24.4.0",
    "supabase>=2.10.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 88
target-version = ["py312"]
