[project]
name = "signbridge-backend"
version = "0.1.0"
description = "SignBridge Live FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "supabase>=2.10.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "httpx>=0.28.0",
    # Computer Vision & Gesture Recognition
    "opencv-python-headless>=4.10.0",
    "mediapipe>=0.10.14",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "google-generativeai>=0.8.0",
    "opencv-python>=5.0.0.93",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 88
target-version = ["py312"]
